Fixing up forbidden invocations.